--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+backend/node_modules/
+frontend/node_modules/
 /.pnp
 .pnp.js
 
-.env
+backend/.env
 
 # testing
 /coverage
